# distributed-systems-middleware

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
agent/: CMakeLists.txt  agent.hpp  main.cpp
client/: CMakeLists.txt  client.hpp  main.cpp
docs/: CMakeLists.txt
middleware/: CMakeLists.txt  config.h  main.cpp  middleware.hpp  pch.hpp
tests/: CMakeLists.txt
tests/middleware/: CMakeLists.txt
